--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,16 +35,19 @@ dependencies:
   permission_handler: ^10.2.0
   flutter_foreground_task: ^3.10.0
   shared_preferences: ^2.0.15
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  flutter_riverpod: ^2.1.1
+  riverpod_annotation: ^1.0.6
+  unique_name_generator: ^1.0.0
   cupertino_icons: ^1.0.2
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.7.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.11.0
+  build_runner:
+  riverpod_generator: ^1.0.6
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -52,6 +55,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  freezed: ^2.3.2
+  json_serializable: ^6.5.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
