--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   freezed_annotation: ^2.2.0
   json_annotation: ^4.7.0
+  device_info_plus: ^8.0.0
 
 dev_dependencies:
   flutter_test:
