--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   freezed_annotation: ^2.2.0
   json_annotation: ^4.7.0
   device_info_plus: ^8.0.0
+  flutter_markdown: ^0.6.13
 
 dev_dependencies:
   flutter_test:
