--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -50,7 +50,7 @@
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>NSBluetoothAlwaysUsageDescription</key>
-	<string>Our app uses bluetooth to find, connect and transfer data between different devices</string>
+	<string>Our app uses bluetooth to find, connect and transfer data between bikes</string>
 	<key>NSBluetoothPeripheralUsageDescription</key>
 	<string>Our app only uses this information to connect to your bike</string>
 </dict>
