--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ publish_to: 'none'
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.0.17+17
+version: 0.0.18+18
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
@@ -57,8 +57,8 @@ flutter:
 flutter_icons:
   android: "launcher_icon"
   adaptive_icon_background: "#DBECF0"
-  adaptive_icon_foreground: "superduper_android.png"
+  adaptive_icon_foreground: "assets/superduper_android.png"
   ios: true
-  image_path: "superduper_android.png"
-  image_path_ios: "superduper.png"
+  image_path: "assets/superduper_android.png"
+  image_path_ios: "assets/superduper.png"
   remove_alpha_ios: true
