--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,11 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.REQUEST_COMPANION_RUN_IN_BACKGROUND" />
+    <uses-permission android:name="android.permission.REQUEST_COMPANION_USE_DATA_IN_BACKGROUND" />
+    <uses-permission android:name="android.permission.REQUEST_OBSERVE_COMPANION_DEVICE_PRESENCE" />
+    
+    <uses-feature android:name="android.software.companion_device_setup"/>
    <application
         android:label="SuperDuper"
         android:name="${applicationName}"
@@ -44,5 +49,14 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+       <service
+           android:name=".CompanionService"
+           android:label="CompanionService"
+           android:exported="true"
+           android:permission="android.permission.BIND_COMPANION_DEVICE_SERVICE">
+           <intent-filter>
+               <action android:name="android.companion.CompanionDeviceService" />
+           </intent-filter>
+       </service>
     </application>
 </manifest>
