--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   device_info_plus: ^8.0.0
-  flutter_foreground_task: ^3.10.0
+  flutter_foreground_task: ^4.0.0
   flutter_markdown: ^0.6.13
   flutter_reactive_ble: ^5.0.3
   flutter_riverpod: ^2.1.1
@@ -23,6 +23,8 @@ dependencies:
   riverpod_annotation: ^1.0.6
   unique_name_generator: ^1.0.0
   url_launcher: ^6.1.8
+  flutter_form_builder: ^7.7.0
+  form_builder_validators: ^8.4.0
 
 dev_dependencies:
   flutter_test:
@@ -30,12 +32,6 @@ dev_dependencies:
   flutter_launcher_icons: ^0.11.0
   build_runner:
   riverpod_generator: ^1.0.6
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   freezed: ^2.3.2
   json_serializable: ^6.5.4
