--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
    <application
-        android:label="SuperDuper"
+        android:label="Superduper"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <service android:name="com.pravera.flutter_foreground_task.service.ForegroundService" />
