--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: superduper
 description: An app for super bikes
-publish_to: 'none'
+publish_to: "none"
 version: 0.0.23+23
 
 environment:
-  sdk: '>=2.18.6 <4.0.0'
+  sdk: ">=2.18.6 <4.0.0"
 
 dependencies:
   flutter:
@@ -18,9 +18,9 @@ dependencies:
   freezed_annotation: ^2.2.0
   hive_flutter: ^1.1.0
   hive: ^2.2.3
-  json_annotation: ^4.7.0
+  json_annotation: ^4.8.0
   permission_handler: ^10.2.0
-  riverpod_annotation: ^1.0.6
+  riverpod_annotation: ^2.0.0
   unique_name_generator: ^1.0.0
   url_launcher: ^6.1.8
   flutter_form_builder: ^7.7.0
@@ -29,9 +29,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.11.0
+  flutter_launcher_icons: ^0.12.0
   build_runner:
-  riverpod_generator: ^1.0.6
+  riverpod_generator: ^2.0.0
   flutter_lints: ^2.0.0
   freezed: ^2.3.2
   json_serializable: ^6.5.4
@@ -40,7 +40,6 @@ flutter:
   uses-material-design: true
   assets:
     - assets/superduper-nobg.png
-
 
 flutter_icons:
   android: "launcher_icon"
