--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: ^0.12.0
   build_runner:
-  riverpod_generator: ^2.0.0
+  custom_lint:
+  flutter_launcher_icons: ^0.13.0
   flutter_lints: ^2.0.0
   freezed: ^2.3.2
   json_serializable: ^6.5.4
+  riverpod_generator: ^2.1.6
+  riverpod_lint: ^1.2.0
 
 flutter:
   uses-material-design: true
