Add Delete Bike

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,13 @@
 {
   "cSpell.words": [
+    "Autovalidate",
+    "bikesdb",
+    "Buildless",
     "cupertino",
+    "newmode",
     "nobg",
     "Riverpod",
+    "settingsdb",
     "superduper"
   ]
 }
