Update deps, get building

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,14 @@
 {
   "cSpell.words": [
+    "autorenew",
     "Autovalidate",
     "bikesdb",
     "Buildless",
     "cupertino",
+    "ebike",
     "newmode",
     "nobg",
+    "phonelink",
     "Riverpod",
     "settingsdb",
     "superduper"
