--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,19 +12,18 @@ dependencies:
   cupertino_icons: ^1.0.2
   device_info_plus: ^10.0.0
   flutter_foreground_task: ^6.0.0
-  flutter_markdown: ^0.6.13
+  flutter_markdown: ^0.7.0
   flutter_reactive_ble: ^5.0.3
   flutter_riverpod: ^2.1.1
   freezed_annotation: ^2.2.0
-  hive_flutter: ^1.1.0
-  hive: ^2.2.3
   json_annotation: ^4.8.1
   permission_handler: ^11.0.0
   riverpod_annotation: ^2.0.0
   unique_name_generator: ^1.0.0
   url_launcher: ^6.1.8
   flutter_form_builder: ^9.0.0
-  form_builder_validators: ^9.0.0
+  form_builder_validators: ^10.0.0
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
@@ -32,10 +31,10 @@ dev_dependencies:
   build_runner:
   custom_lint:
   flutter_launcher_icons: ^0.13.0
-  flutter_lints: ^3.0.1
-  freezed: ^2.3.2
+  flutter_lints: ^4.0.0
+  freezed: ^2.5.0
   json_serializable: ^6.5.4
-  riverpod_generator: ^2.1.6
+  riverpod_generator: ^2.4.0
   riverpod_lint: ^2.0.4
 
 flutter:
