--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,19 +11,19 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   device_info_plus: ^10.0.0
+  flutter_blue_plus: ^1.32.7
   flutter_foreground_task: ^6.0.0
+  flutter_form_builder: ^9.0.0
   flutter_markdown: ^0.7.0
-  flutter_reactive_ble: ^5.0.3
   flutter_riverpod: ^2.1.1
+  form_builder_validators: ^10.0.0
   freezed_annotation: ^2.2.0
   json_annotation: ^4.8.1
+  path_provider: ^2.1.3
   permission_handler: ^11.0.0
   riverpod_annotation: ^2.0.0
   unique_name_generator: ^1.0.0
   url_launcher: ^6.1.8
-  flutter_form_builder: ^9.0.0
-  form_builder_validators: ^10.0.0
-  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
