--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,5 +3,5 @@ updates:
   - package-ecosystem: pub
     directory: /
     schedule:
-      interval: weekly
+      interval: monthly
     open-pull-requests-limit: 20
