--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   riverpod_annotation: ^2.0.0
   unique_name_generator: ^1.0.0
   url_launcher: ^6.1.8
+  logger: ^2.5.0
 
 dev_dependencies:
   flutter_test:
