--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   form_builder_validators: ^11.0.0
   freezed_annotation: ^3.0.0
   json_annotation: ^4.9.0
+  collection: ^1.17.0
   path_provider: ^2.1.3
   permission_handler: ^12.0.0
   riverpod_annotation: ^2.0.0
