--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dev_dependencies:
   build_runner:
   custom_lint:
   flutter_launcher_icons: ^0.14.0
+  analyzer: 7.3.0
   flutter_lints: ^5.0.0
   freezed: ^3.0.0
   json_serializable: ^6.9.0
