--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,23 +4,23 @@ publish_to: "none"
 version: 0.7.2+51
 
 environment:
-  sdk: ">=3.2.0 <4.0.0"
+  sdk: ^3.8.0
 
 dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  device_info_plus: ^11.0.0
+  device_info_plus: ^12.0.0
   flutter_blue_plus: ^1.32.7
   flutter_foreground_task: ^6.0.0
   flutter_form_builder: ^10.0.0
-  flutter_riverpod: ^2.1.1
+  flutter_riverpod: ^3.0.0
   form_builder_validators: ^11.0.0
   freezed_annotation: ^3.0.0
   json_annotation: ^4.9.0
   path_provider: ^2.1.3
   permission_handler: ^12.0.0
-  riverpod_annotation: ^2.0.0
+  riverpod_annotation: ^3.0.0
   unique_name_generator: ^1.0.0
   url_launcher: ^6.1.8
   logger: ^2.5.0
@@ -32,10 +32,10 @@ dev_dependencies:
   custom_lint:
   flutter_launcher_icons: ^0.14.0
   flutter_lints: ^6.0.0
-  freezed: ^3.0.0
-  json_serializable: ^6.9.0
-  riverpod_generator: ^2.4.0
-  riverpod_lint: ^2.0.4
+  freezed: ^3.2.0
+  json_serializable: ^6.11.0
+  riverpod_generator: ^3.0.0
+  riverpod_lint: ^3.0.0
 
 flutter:
   uses-material-design: true
